@@ -2,6 +2,15 @@
 
         Reviewed by Maciej.
 
+        Remove unused preprocessor macros related to exceptions in the old
+        interpreter.
+
+        * kjs/nodes.cpp:
+
+2008-06-15  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed by Maciej.
+
         Bug 19484: More instructions needs to use temporary registers
         <https://bugs.webkit.org/show_bug.cgi?id=19484>
 
